{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 32,
  "lineage": "cf834c34-f9ff-a4ad-085b-71f6c878d3cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c5c278c9a906a1",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:elastic-ip/eipalloc-091c5c278c9a906a1",
            "association_id": "eipassoc-0ce3bf6eb0ef7f363",
            "domain": "vpc",
            "id": "eipalloc-091c5c278c9a906a1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09ad4b85d643f9fa6",
            "private_dns": "ip-10-0-1-155.ap-south-1.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-3-6-12-52.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.12.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "phd-nat-eip",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-nat-eip",
              "Project": "k8s-docker-comparison"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-0b29936a42d4ee138",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b29936a42d4ee138",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0271b24f672e58964",
            "private_dns": "ip-10-0-1-211.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-15-207-86-193.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.86.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-0d4aa96ca67e526f4",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-docker-manager",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-manager"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-docker-manager",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dececb8319b380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_security_group.worker_nodes_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-090606d00ffbe6bfc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090606d00ffbe6bfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07df480c4f05f76ae",
            "private_dns": "ip-10-0-1-14.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-65-0-98-185.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.98.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-081521ec3ee296e45",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-docker-worker-1",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-worker"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-docker-worker-1",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dececb8319b380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.docker_manager",
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_security_group.worker_nodes_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-05f9236aee3df3cf7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f9236aee3df3cf7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ba1ee0f65e9a0a4",
            "private_dns": "ip-10-0-1-234.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-13-126-164-39.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.164.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-009cad16ce633fdb8",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-docker-worker-2",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-worker"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-docker-worker-2",
              "Project": "k8s-docker-comparison",
              "Role": "docker-swarm-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dececb8319b380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.docker_manager",
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_security_group.worker_nodes_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-07999b55b2cadfbf1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "KarpenterControllerIAMInstanceProfile",
            "id": "i-07999b55b2cadfbf1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b47ee576f85c48ec",
            "private_dns": "ip-10-0-1-20.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-52-66-203-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.203.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-0d2352b26ec2de939",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-k8s-control-plane",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-k8s-control-plane",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0761b7440016ca9dc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.karpenter_controller_instance_profile",
            "aws_iam_role.karpenter_controller_role",
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-04f3b6ca09347c72c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f3b6ca09347c72c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab54ccf675f3c0d8",
            "private_dns": "ip-10-0-1-212.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-15-207-86-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.86.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-014049645f8627b5b",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-k8s-worker-1",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned",
              "node-type": "karpenter-managed"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-k8s-worker-1",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned",
              "node-type": "karpenter-managed"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dececb8319b380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_security_group.worker_nodes_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095cc90aa5ddff518",
            "arn": "arn:aws:ec2:ap-south-1:648786395595:instance/i-0ca109c0bd7cc2e07",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca109c0bd7cc2e07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "phd-research-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017036e4c2d37743b",
            "private_dns": "ip-10-0-1-192.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-15-206-145-215.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.145.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:648786395595:key/d8e288fb-f753-49c4-a2fc-0915427d76bb",
                "throughput": 125,
                "volume_id": "vol-0445b54148b745cd8",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Environment": "research",
              "Name": "phd-k8s-worker-2",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned",
              "node-type": "karpenter-managed"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-k8s-worker-2",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/cluster/phd-k8s-cluster": "owned",
              "node-type": "karpenter-managed"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021dececb8319b380"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.research_key",
            "aws_security_group.k8s_control_plane_sg",
            "aws_security_group.worker_nodes_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "research_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:internet-gateway/igw-0b9b18af6aefe1a64",
            "id": "igw-0b9b18af6aefe1a64",
            "owner_id": "648786395595",
            "tags": {
              "Name": "phd-research-igw",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-research-igw",
              "Project": "k8s-docker-comparison"
            },
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.research_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "research_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c5c278c9a906a1",
            "association_id": "eipassoc-0ce3bf6eb0ef7f363",
            "connectivity_type": "public",
            "id": "nat-06b8423ed615e4cf6",
            "network_interface_id": "eni-09ad4b85d643f9fa6",
            "private_ip": "10.0.1.155",
            "public_ip": "3.6.12.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05029c9a22a3b123e",
            "tags": {
              "Name": "phd-research-nat",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-research-nat",
              "Project": "k8s-docker-comparison"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.research_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:route-table/rtb-07d6183c5033962f9",
            "id": "rtb-07d6183c5033962f9",
            "owner_id": "648786395595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b8423ed615e4cf6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phd-private-rt",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-private-rt",
              "Project": "k8s-docker-comparison"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.research_igw",
            "aws_nat_gateway.research_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:route-table/rtb-0e565f9a71e84c193",
            "id": "rtb-0e565f9a71e84c193",
            "owner_id": "648786395595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9b18af6aefe1a64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phd-public-rt",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-public-rt",
              "Project": "k8s-docker-comparison"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.research_igw",
            "aws_vpc.research_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c71f64724c948973",
            "route_table_id": "rtb-07d6183c5033962f9",
            "subnet_id": "subnet-06e72b703d8642681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.research_igw",
            "aws_nat_gateway.research_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0918924adb4933bf0",
            "route_table_id": "rtb-0e565f9a71e84c193",
            "subnet_id": "subnet-05029c9a22a3b123e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.research_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:security-group/sg-0761b7440016ca9dc",
            "description": "Security group for Kubernetes control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0761b7440016ca9dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "phd-k8s-control-plane-sg",
            "name_prefix": "",
            "owner_id": "648786395595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "phd-k8s-control-plane-sg",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-k8s-control-plane-sg",
              "Project": "k8s-docker-comparison"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.research_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:security-group/sg-021dececb8319b380",
            "description": "Security group for worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021dececb8319b380",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0761b7440016ca9dc"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "phd-worker-nodes-sg",
            "name_prefix": "",
            "owner_id": "648786395595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "phd-worker-nodes-sg",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Name": "phd-worker-nodes-sg",
              "Project": "k8s-docker-comparison"
            },
            "timeouts": null,
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_control_plane_sg",
            "aws_vpc.research_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:subnet/subnet-06e72b703d8642681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e72b703d8642681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648786395595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phd-private-subnet",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "phd-private-subnet",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:subnet/subnet-05029c9a22a3b123e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05029c9a22a3b123e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "648786395595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "phd-public-subnet",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "phd-public-subnet",
              "Project": "k8s-docker-comparison",
              "karpenter.sh/discovery": "phd-k8s-cluster",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0607321b2c359b220"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.research_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "research_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:648786395595:vpc/vpc-0607321b2c359b220",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8096f54c8fca299",
            "default_route_table_id": "rtb-0dee4b3840f1a8e8b",
            "default_security_group_id": "sg-0acae9521635c6cf8",
            "dhcp_options_id": "dopt-0fcefbe6c1426b2b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0607321b2c359b220",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dee4b3840f1a8e8b",
            "owner_id": "648786395595",
            "tags": {
              "Environment": "research",
              "Name": "phd-research-vpc",
              "Project": "k8s-docker-comparison"
            },
            "tags_all": {
              "Environment": "research",
              "Name": "phd-research-vpc",
              "Project": "k8s-docker-comparison"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}